--- a/addons/im_livechat/web_page.html
+++ b/addons/im_livechat/web_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript">
-        window.oe_live_support_auto = true;
+        window.oe_im_livechat_auto = true;
     </script>
     {{script}}
     <style type="text/css">
